--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@react-three/postprocessing": "^2.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.171.0",
+    "react-scroll": "^1.9.0",
+    "three": "^0.170.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
